2019.11.18  练习 Number_392 判断子序列（is-subsequence） 1.本来第一种方法是应对数据量大的情况 但是实际效果不好 数据量不大的时候跑的就不快  不过代码可以优化 看了下解答 发现思路跟这个方法一样 2.第二种方法是直接遍历 速度较快
Number_70  爬楼梯（climbing-stairs）
比较简单

Number_718 最长重复子数组（maximum-length-of-repeated-subarray）
整个过程有点像滑动窗口 第二个方法很精妙也很快 值得学习

Number_764 最大加号标志（largest-plus-sign）
没有想到更好的办法  暴力法超时 二维dp能够解决 不过用时还是比较长
最后的方法是目前最快的 思路跟前一种一样 但代码写得更好